# automata

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile.raspberrypi  Procfile  README.md  alembic.ini  apps.code-workspace  automata.code-workspace  cookiecutter-config-file.yml  docker-compose.override.yml.example  docker-compose.raspberrypi.yml  docker-compose.rpi.yml  docker-compose.yml  heroku.yml  install-requirements.sh  main.py  pyproject.toml  requirements.txt  setup.cfg  start-raspberry.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: __init__.py  config.py  db.py  logger.py  main.py  scheluder.py  utils.py
apps/: __init__.py  logger.py  main.py
apps_old/: LICENSE  README.md  setup.cfg
apps_old/apps/: applications.py
apps_old/cronjobs/: cleanup.sh
apps_old/tests/: main.py
automata/: .env  __init__.py  application.py  config.py  logger.py  main.py  scheluder.py  shceluder.py
cronjobs/: backup.sh
frontend/: .env
migrations/: env.py
migrations/versions/: 39d811a319e9_required_foreign_keys.py  4b8504792353_initial.py  4f2b7c1a828f_unique_column_book_reader_combination.py  58110040ec1b_last_name_to_readers.py  6165962fd18b_readers.py  6ba43edbc8b1_foreign_key_as_int.py  942d122658c3_books_readers.py  b74b41acb90f_nullable_and_indexed_reader.py  ca412443b884_book_to_books.py  d04fc60aa73c_rename_books_to_book.py
notes/: 12-_factor.ipynb  anvanced_python.ipynb  best-practices.ipynb  classess.py  clean_code.ipynb  clean_code_2.ipynb  dataclasses-tuto.py  game.py  multiprocessing_examples.py  oop_python.ipynb  small_example.py  threading_examples.py
notes/betterpython/: .gitignore
notes/patterns/: requirements-dev.txt
notes/stock-market-forecasting-v2/: Intraday-240,1-LSTM.py  Intraday-240,3-LSTM.py  Intraday-240,3-RF.py
notes/testing/: .gitignore  testing.py
scripts/: backup.sh  cleanup.sh  entrypoint.sh  postcreate.sh  postinstall.sh  prestart-app.sh  prestart-mac.sh  prestart-rpi.sh  prestart.sh  setenv.sh  start-raspberry.sh  start-rpi.sh  test.sh  udate.sh  update.sh
src/: config.py  cronjobs.py  download_playlist.py  download_playlist.sh  globals.py  logs.py
src/apps/: __init__.py  app.py  config.py  globals.py  logger.py  main.py  shceluder.py
stock-market-forecasting-v2/: Intraday-240,1-RF.py  NextDay-240,1-LSTM.py  NextDay-240,1-RF.py  README.md  Statistics.py  notebook.ipynb
tests/: conftest.py  main.py  test_apps.py  test_config.py  test_logger.py  test_main.py  test_scheluder.py
(+35 files in other folders)
