[tool.poetry]
name = "apps"
version = "0.1.0"
description = "Utilities using best practices with notes and examples"
authors = ["Felipe Restrepo <maferelo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
python-crontab = "^2.6.0"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pylint = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
