[metadata]
name = apps
version = attr: apps.__version__
url = https://
project_urls =
    Donate = https://
    Documentation = https://
    Changes = https://
    Source Code = https://
    Issue Tracker = https://
    Twitter = https://
    Chat = https://
license = MIT License
author = Felipe Restrepo
author_email = maferelo13@gmail.com
description = A simple collection of apps for Raspbian automation.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Framework :: Typer
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: Raspbian GNU/Linux
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[tool:pytest]
testpaths = tests